# Prev-Player

./: .gitignore  App-old.tsx  App.tsx  README.md  implementation_plan.md  index.html  metadata.json  package-lock.json  package.json  share.ts  test.md  utils.ts  vite.config.ts
components/: ActionOverlay.tsx  PlayerControls.tsx  ShareModal.tsx  VideoLibrary.tsx  VideoPlayer.tsx
electron/: main.cjs  main.js  preload.js
full-engine/: .gitignore  ARCHITECTURE.md  App.tsx  GET_STARTED.md  INSTALLATION.md  README.md  RELEASING.md  index.html  mpv.ts  package-lock.json  package.json  settings.ts  share.ts  test.md  utils.ts
full-engine/.github/workflows/: release.yml
full-engine/components/: ActionOverlay.tsx  DownloadsPanel.tsx  PlayerControls.tsx  SettingsModal.tsx  ShareModal.tsx  SpeedPanel.tsx  VideoLibrary.tsx  VideoPlayer.tsx
full-engine/public/: manifest.json  service-worker.js
full-engine/src-tauri/: Cargo.toml  tauri.conf.json
full-engine/src-tauri/capabilities/: default.json
full-engine/src-tauri/icons/: icon.icns
full-engine/src-tauri/src/: lib.rs  share.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lan.rs  lib.rs  main.rs  share.rs
