[package]
name = "prev-player"
version = "1.0.13"
edition = "2021"

[lib]
name = "prev_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Sharing: stream files to/from GitHub Release assets (free CDN backend) + GitHub API.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tauri-plugin-deep-link = "2"
# LAN sharing: a tiny local HTTP server that streams the file (range/seek) with
# nothing stored in the cloud — ephemeral, no account.
tiny_http = "0.12"

# Auto-updater: checks the signed `latest.json` manifest, downloads + installs
# the new build, then `tauri-plugin-process` is used to relaunch the app.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
